syntax = "proto3";
package org.example.grpc;

message HelloRequest {
  string name = 1;
  repeated string hobbies = 2;
}

message HelloResponse {
  string response = 1;
}

message EmptyRequest {}

service GreetingService {
  rpc greeting(HelloRequest) returns (HelloResponse);
  rpc sendStream(EmptyRequest) returns (stream HelloResponse);
}